# jsonrpc-lean

./: .gitignore  CMakeLists.txt
cmake/: install.cmake
examples/: base64.cpp  testclient.cpp  testserver.cpp
